aggiunta opzione scarica pdf dieta, aggiornamento pagine profili, sistemati diversi css, completata la pagina ModificaPassword

--- a/src/main/resources/com/matteotocci/app/HomePageNutrizionista.fxml
+++ b/src/main/resources/com/matteotocci/app/HomePageNutrizionista.fxml
@@ -51,12 +51,12 @@
                             <children>
                                 <Button maxWidth="Infinity" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button,nav-button-active" text="👥 Clienti" />
                                 <Button maxWidth="Infinity" mnemonicParsing="false" prefHeight="50.0" onAction="#AccessoAlimenti" styleClass="nav-button" text="🥗 Alimenti" />
-                                <Button fx:id="BottoneRicette" maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoRicetteNutrizionista" prefHeight="50.0" styleClass="nav-button" text="Ricette">
+                                <Button fx:id="BottoneRicette" maxWidth="Infinity" mnemonicParsing="false" onAction="#AccessoRicetteNutrizionista" prefHeight="50.0" styleClass="nav-button" text="📖 Ricette">
                                     <cursor>
                                         <Cursor fx:constant="HAND" />
                                     </cursor>
                                 </Button>
-                        <Button layoutX="10.0" layoutY="76.0" maxWidth="Infinity" onAction="#AccessoDieta" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button" text="Diete" />
+                        <Button layoutX="10.0" layoutY="76.0" maxWidth="Infinity" onAction="#AccessoDieta" mnemonicParsing="false" prefHeight="50.0" styleClass="nav-button" text="📋 Diete" />
                             </children>
                         </VBox>
                     </children>
