--- a/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
+++ b/src/main/resources/com/matteotocci/app/ModificaPassword.fxml
@@ -12,31 +12,33 @@
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.HBox?>
-<?import javafx.scene.layout.Priority?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane prefHeight="350.0" prefWidth="700.0" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
+<AnchorPane prefHeight="350.0" prefWidth="700.0" styleClass="anchor-pane" stylesheets="@css/ModificaPassword-Style.css" xmlns="http://javafx.com/javafx/23.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.matteotocci.app.controller.ModificaPassword">
     <children>
-        <VBox AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0" style="-fx-padding: 20;">
+        <VBox styleClass="vbox" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <children>
-                <HBox alignment="CENTER_LEFT" spacing="15.0" VBox.vgrow="NEVER">
+                <!-- Header con logo e titolo -->
+                <HBox alignment="CENTER_LEFT" spacing="15.0" styleClass="hbox" VBox.vgrow="NEVER">
                     <children>
-                        <ImageView fitHeight="71.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true">
+                        <ImageView fitHeight="71.0" fitWidth="94.0" pickOnBounds="true" preserveRatio="true" styleClass="image-view">
                             <image>
-                                <Image url="@immagini/logo.jpg" />
+                                <Image url="@immagini/logo.png" />
                             </image>
                         </ImageView>
-                        <Label style="-fx-font-size: 28px; -fx-font-weight: bold; -fx-text-fill: #ff9900;" text="Modifica Password" HBox.hgrow="ALWAYS"/>
+                        <Label style="-fx-font-size: 28px; -fx-font-weight: bold" text="Modifica Password" HBox.hgrow="ALWAYS" />
                     </children>
                     <padding>
                         <Insets bottom="20.0" />
                     </padding>
                 </HBox>
 
+                <!-- Contenuto principale -->
                 <VBox spacing="15.0" VBox.vgrow="ALWAYS">
                     <children>
-                        <GridPane hgap="10.0" vgap="10.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
+                        <!-- Griglia con campi password -->
+                        <GridPane hgap="10.0" styleClass="grid-pane" vgap="15.0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS">
                             <columnConstraints>
                                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="Infinity" minWidth="10.0" prefWidth="150.0" />
                                 <ColumnConstraints hgrow="ALWAYS" maxWidth="Infinity" minWidth="10.0" />
@@ -48,29 +50,47 @@
                                 <RowConstraints vgrow="ALWAYS" />
                             </rowConstraints>
                             <children>
-                                <Label style="-fx-font-weight: bold;" text="Vecchia Password:" GridPane.rowIndex="0" />
-                                <PasswordField fx:id="vecchiaPasswordField" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
-                                <Label style="-fx-font-weight: bold;" text="Nuova Password:" GridPane.rowIndex="1" />
-                                <PasswordField fx:id="nuovaPasswordField" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="1" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
-                                <Label style="-fx-font-weight: bold;" text="Conferma Password:" GridPane.rowIndex="2" />
-                                <PasswordField fx:id="confermaPasswordField" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" GridPane.columnIndex="1" GridPane.rowIndex="2" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
-                                <CheckBox fx:id="mostraVecchiaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiVecchiaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="0" />
-                                <CheckBox fx:id="mostraNuovaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiNuovaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                                <CheckBox fx:id="mostraConfermaPasswordCheckBox" mnemonicParsing="false" onAction="#mostraNascondiConfermaPassword" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="2" />
-                                <TextField fx:id="vecchiaPasswordFieldVisible" managed="false" promptText="Inserisci la vecchia password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
-                                <TextField fx:id="nuovaPasswordFieldVisible" managed="false" promptText="Inserisci la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
-                                <TextField fx:id="confermaPasswordFieldVisible" managed="false" promptText="Conferma la nuova password" style="-fx-border-color: #ccc; -fx-border-radius: 5; -fx-padding: 8;" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2" HBox.hgrow="ALWAYS" VBox.vgrow="ALWAYS" maxWidth="Infinity" />
+                                <!-- Riga 1 - Vecchia Password -->
+                                <Label styleClass="label" text="Vecchia Password:" GridPane.rowIndex="0" />
+
+                                <PasswordField fx:id="vecchiaPasswordField" maxWidth="Infinity" promptText="Inserisci la vecchia password" styleClass="password-field" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+                                <TextField fx:id="vecchiaPasswordFieldVisible" managed="false" maxWidth="Infinity" promptText="Inserisci la vecchia password" styleClass="text-field" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="0" />
+
+                                <CheckBox fx:id="mostraVecchiaPasswordCheckBox" mnemonicParsing="false" styleClass="check-box" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="0" />
+
+                                <!-- Riga 2 - Nuova Password -->
+                                <Label styleClass="label" text="Nuova Password:" GridPane.rowIndex="1" />
+
+                                <PasswordField fx:id="nuovaPasswordField" maxWidth="Infinity" promptText="Inserisci la nuova password" styleClass="password-field" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                                <TextField fx:id="nuovaPasswordFieldVisible" managed="false" maxWidth="Infinity" promptText="Inserisci la nuova password" styleClass="text-field" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+
+                                <CheckBox fx:id="mostraNuovaPasswordCheckBox" mnemonicParsing="false"  styleClass="check-box" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="1" />
+
+                                <!-- Riga 3 - Conferma Password -->
+                                <Label styleClass="label" text="Conferma Password:" GridPane.rowIndex="2" />
+
+                                <PasswordField fx:id="confermaPasswordField" maxWidth="Infinity" promptText="Conferma la nuova password" styleClass="password-field" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+                                <TextField fx:id="confermaPasswordFieldVisible" managed="false" maxWidth="Infinity" promptText="Conferma la nuova password" styleClass="text-field" visible="false" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+
+                                <CheckBox fx:id="mostraConfermaPasswordCheckBox" mnemonicParsing="false" styleClass="check-box" text="Mostra" GridPane.columnIndex="2" GridPane.rowIndex="2" />
                             </children>
                         </GridPane>
+
+                        <!-- Pulsante di conferma -->
                         <HBox alignment="BOTTOM_RIGHT" VBox.vgrow="NEVER">
                             <children>
-                                <Button onMouseClicked="#salvaNuovaPassword" style="-fx-background-color: #008CBA; -fx-text-fill: white; -fx-padding: 10 20; -fx-font-weight: bold; -fx-border-radius: 5; -fx-cursor: hand; -fx-font-size: 14px;" text="Salva Nuova Password" />
+                                <Button minWidth="123.0" onMouseClicked="#salvaNuovaPassword" prefHeight="43.0" prefWidth="123.0" styleClass="button" text="Salva Password" />
                             </children>
                         </HBox>
                     </children>
                 </VBox>
             </children>
+            <padding>
+                <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+            </padding>
         </VBox>
     </children>
 </AnchorPane>
-
